tests/snapshots/snapshot_test__rollback_back_to_state1.snap
---
source: tests/snapshot_test.rs
expression: display4
---
Text:
  speaker: ~
  text: State 1
  visual:
    background: assets/bg1.png
    character: ~
    char_pos: center
    characters: []
