tests/snapshots/snapshot_test__rollback_back_to_state2.snap
---
source: tests/snapshot_test.rs
expression: display3
---
Text:
  speaker: ~
  text: State 2
  visual:
    background: assets/bg2.png
    character: ~
    char_pos: center
    characters: []
