tests/snapshots/snapshot_test__rollback_state3.snap
---
source: tests/snapshot_test.rs
expression: display2
---
Text:
  speaker: ~
  text: State 3
  visual:
    background: assets/bg3.png
    character: ~
    char_pos: center
    characters: []
