tests/snapshots/snapshot_test__state_after_choice_0.snap
---
source: tests/snapshot_test.rs
expression: display
---
Text:
  speaker: ~
  text: You entered the forest.
  visual:
    background: ~
    character: ~
    char_pos: center
    characters: []
    nvl_mode: false
